@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

entity usuarios {
  +id [PK]
  email
  username
  nombre
  apellido
  rol
  estado
  prestamos_activos
  max_prestamos_permitidos
  multas_pendientes
  sancionado_hasta
}

entity estudiantes {
  +id [PK]
  usuario_id [FK]
  carrera
  matricula
  semestre_actual
  fecha_ingreso
}

entity docentes {
  +id [PK]
  usuario_id [FK]
  numero_empleado
  departamento
  especialidad
  tipo_contrato
}

entity administradores {
  +id [PK]
  usuario_id [FK]
  area
  cargo
  nivel_acceso
  supervisor_id [FK]
}

entity invitaciones_registro {
  +id [PK]
  token
  email_invitado
  rol_asignado
  estado
  creado_por_id [FK]
  usuario_registrado_id [FK]
}

entity usuarios_notificacion {
  +id [PK]
  usuario_id [FK]
  tipo
  titulo
  prioridad
  leida
}

entity usuarios_configuracion_notificacion {
  +id [PK]
  usuario_id [FK]
  prestamos_email
  prestamos_push
  multas_email
  multas_push
}

entity usuarios_registro_auditoria {
  +id [PK]
  usuario_id [FK]
  accion
  nivel_riesgo
  exitosa
}

entity usuarios_sesion_auditoria {
  +id [PK]
  usuario_id [FK]
  session_key UNIQUE
  ip_address
  activa
}

entity usuarios_acceso_recurso {
  +id [PK]
  usuario_id [FK]
  recurso_tipo
  recurso_id
  tipo_acceso
}

entity usuarios_configuracion_auditoria {
  +id [PK]
  actualizada_por_id [FK]
  dias_retencion_logs
  alertas_activas
}

entity libros {
  +id [PK]
  titulo
  autor
  isbn
  categoria
  estado
  cantidad_total
  cantidad_disponible
}

entity prestamos {
  +id [PK]
  libro_id [FK]
  usuario_id [FK]
  aprobado_por_id [FK]
  estado
  fecha_prestamo
  fecha_devolucion_esperada
  renovaciones
}

entity reservas {
  +id [PK]
  libro_id [FK]
  usuario_id [FK]
  estado
  fecha_reserva
  fecha_expiracion
}

entity bibliografias {
  +id [PK]
  docente_id [FK]
  curso
  programa
  activa
  es_publica
}

entity bibliografias_libros {
  +id [PK]
  bibliografia_id [FK]
  libro_id [FK]
}

entity sanciones {
  +id [PK]
  usuario_id [FK]
  prestamo_id [FK]
  tipo
  monto
  dias_suspension
  estado
}

entity notificaciones {
  +id [PK]
  usuario_id [FK]
  titulo
  mensaje
  tipo
  leida
}

' Relaciones
estudiantes ||--|| usuarios : "usuario_id"
docentes ||--|| usuarios : "usuario_id"
administradores ||--|| usuarios : "usuario_id"
administradores }o--o| administradores : "supervisor_id"
invitaciones_registro }o--|| usuarios : "creado_por_id"
invitaciones_registro }o--o| usuarios : "usuario_registrado_id"
usuarios_notificacion }o--|| usuarios : "usuario_id"
usuarios_configuracion_notificacion ||--|| usuarios : "usuario_id"
usuarios_registro_auditoria }o--o| usuarios : "usuario_id"
usuarios_sesion_auditoria }o--|| usuarios : "usuario_id"
usuarios_acceso_recurso }o--|| usuarios : "usuario_id"
usuarios_configuracion_auditoria }o--o| usuarios : "actualizada_por_id"
prestamos }o--|| libros : "libro_id"
prestamos }o--|| usuarios : "usuario_id"
prestamos }o--o| usuarios : "aprobado_por_id"
reservas }o--|| libros : "libro_id"
reservas }o--|| usuarios : "usuario_id"
bibliografias }o--|| docentes : "docente_id"
bibliografias_libros }o--|| bibliografias : "bibliografia_id"
bibliografias_libros }o--|| libros : "libro_id"
sanciones }o--|| usuarios : "usuario_id"
sanciones }o--o| prestamos : "prestamo_id"
notificaciones }o--|| usuarios : "usuario_id"

@enduml